--- a/staff.html
+++ b/staff.html
@@ -10,6 +10,9 @@
     <Our staff>
         <p>my organisation staff</p>
  <figure><img src="https://images.unsplash.com/photo-1663176563971-aa23f7c9b6b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=1000&q=60"alt="
-    <figcaption>aphoto of people</figcaption>
+    <figcaption>aphoto of people </figcaption>
+  <  audio control>
+        <source src="https://www.jango.com/music/Dua + lipa">
+    </audio>
 </body>
 </html>
